Fixed foreclosure rounding issues & validated calculations

--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
-SECRET_KEY=your-secret-key
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
+DB_NAME=loan_management1
+
+DB_USER=postgres
+DB_PASSWORD=appunni0481
 DB_HOST=localhost
-DB_PORT=5432
-EMAIL_HOST_USER=recipient@example.com  # Your email address
-EMAIL_HOST_PASSWORD=your_email_password  # Your email password
-EMAIL_HOST=smtp.your-email-provider.com  # e.g., smtp.gmail.com
-EMAIL_PORT=587  # or 465 for SSL
+DB_PORT=5433
