--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,50 @@
-Django
-djangorestframework
-djangorestframework-simplejwt
-psycopg2-binary  # For PostgreSQL
-django-otp  # For OTP verification
+asgiref==3.8.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+distlib==0.3.8
+Django==5.0.3
+django-cors-headers==4.7.0
+django-environ==0.12.0
+django-extensions==3.2.3
+django-otp==1.5.4
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+filelock==3.13.1
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-SQLAlchemy==3.1.1
+fonttools==4.55.3
+greenlet==3.1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+numpy==2.2.2
+packaging==24.2
+pillow==10.4.0
+platformdirs==4.2.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycurl==7.45.4
+PyJWT==2.9.0
+pyparsing==3.2.1
+PySimpleGUI==5.0.8
+python-dateutil==2.9.0.post0
+requests==2.32.3
+rsa==4.9
+six==1.17.0
+SQLAlchemy==2.0.36
+sqlparse==0.4.4
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.3.0
+virtualenv==20.25.1
+Werkzeug==3.1.3
